packages/parser/test/parser/E0139-member-access-expression.txt
a := .1
===== err =====
anonymous:1:7: ParseError: E0139 - Expected identifier after dot
1 | a := .1
  |       ^
